--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
     <title>News Reader Interface</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loader-container">
+        <div class="loader"></div>
+      </div>
+    </div>
   </body>
 </html>
