Moved loader container out of root

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,9 @@
     <title>News Reader Interface</title>
   </head>
   <body>
-    <div id="root">
-      <div class="loader-container">
-        <div class="loader"></div>
-      </div>
+    <div class="loader-container">
+      <div class="loader"></div>
     </div>
+    <div id="root"></div>
   </body>
 </html>
